# cuCGA

./: Makefile  Makefile.am  README.md  autogen.sh  ca.cu  ca.h  cga.cu  cga.h  configure.ac  consts.h  kernel.cu  kernel.h  main.cu  structs.h  utils.cu  utils.h
src/: Makefile.am  ca.c  ca.h  cga.cu  cga.h  cga_old.cu  consts.h  main.c  structs.h  utils.c  utils.h
